--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,33 @@
 /* font-family: 'Dancing Script', cursive; */
+
+
+.layer {
+    background-color: rgba(60, 60, 60, 0.174);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.top30px {
+    margin-top: 30px;
+}
+
+.text-regalo p {
+    text-align: center;
+    font-family: "DM Serif Text", serif;
+    color: black;
+    font-size: 13px;
+    line-height: 30px;
+    letter-spacing: 2px;
+    padding: 10px;
+  }
+  
+  @media (max-width: 600px) {
+    .text-regalo p {
+      font-size: 15px;
+      line-height: 30px;
+      letter-spacing: 1px;
+    }
+  }
