--- a/src/components/background/background.css
+++ b/src/components/background/background.css
@@ -2,3 +2,12 @@
   background-color: rgba(0, 0, 0, 0.16);
   filter:brightness(1);
 }
+
+.title {
+  position: absolute;
+  top: 10px;
+  font-size: 20px;
+  text-align: center;
+  color: rgb(67, 67, 67);
+  font-family: 'DM Serif Text', serif;
+}
