--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,60 @@
 /* font-family: 'Dancing Script', cursive; */
+/* font-family: 'Cormorant Garamond', serif; */
+/* font-family: 'Lora', serif; */
 
-
-.layer {
-    background-color: rgba(60, 60, 60, 0.174);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 .top30px {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 .text-regalo p {
-    text-align: center;
-    font-family: "DM Serif Text", serif;
-    color: black;
-    font-size: 13px;
+  text-align: center;
+  font-family: "DM Serif Text", serif;
+  color: black;
+  font-size: 13px;
+  line-height: 30px;
+  letter-spacing: 2px;
+  padding: 10px;
+}
+
+.text {
+  padding-left: 25px;
+  padding-right: 25px;
+  text-align: center;
+}
+
+.text-p {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  font-family: 'Cormorant Garamond', serif;
+  letter-spacing: 0.9px;
+}
+
+.count {
+  margin-top: 50px;
+}
+
+@media (max-width: 600px) {
+  .text-regalo p {
+    font-size: 15px;
     line-height: 30px;
-    letter-spacing: 2px;
-    padding: 10px;
+    letter-spacing: 1px;
   }
-  
-  @media (max-width: 600px) {
-    .text-regalo p {
-      font-size: 15px;
-      line-height: 30px;
-      letter-spacing: 1px;
-    }
-  }
+}
+
+.btn-info {
+  background-color: #f9d83284;
+  border: none;
+  color: rgb(24, 24, 24);
+  padding: 8px 20px 8px 20px;
+  font-family: 'Cormorant Garamond', serif;
+}
