--- a/src/components/background/background.css
+++ b/src/components/background/background.css
@@ -1,13 +1,11 @@
-.background-black {
-  background-color: rgba(0, 0, 0, 0.16);
-  filter:brightness(1);
-}
 
 .title {
   position: absolute;
   top: 10px;
-  font-size: 20px;
+  font-size: 12px;
   text-align: center;
   color: rgb(67, 67, 67);
-  font-family: 'DM Serif Text', serif;
+  font-family: 'Cormorant Garamond', serif;
+  letter-spacing: 3px;
 }
+/* font-family: 'Cormorant Garamond', serif; */
