--- a/src/components/dataBank/dataBank.css
+++ b/src/components/dataBank/dataBank.css
@@ -13,22 +13,28 @@
   background-size: cover;
 }
 
-.layer-bank {
-  background-color: rgba(60, 60, 60, 0.174);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.top-190 {
-  margin-top: 190px;
-}
 
 .modal-content {
   width: 320px;
   padding: 30px;
+}
+
+.regalo {
+  margin-top: 50px;
+  font-family: 'Cormorant Garamond', serif;
+}
+
+.text-regalo {
+  text-align: center;
+  letter-spacing: 0.9px;
+}
+
+.text-bank {
+  
+  display: flex;
+  justify-content: center;
+  font-family: 'Cormorant Garamond', serif;
+  letter-spacing: 0.9px;
 }
 
 
