--- a/src/components/history/history.css
+++ b/src/components/history/history.css
@@ -1,23 +1,9 @@
 .title-history {
-    margin-top: 150px;
+    margin-top: 60px;
     display: flex;
     justify-content: center;
-    font-family: 'DM Serif Text', serif;
+    font-family: 'Cormorant Garamond', serif;
     letter-spacing: 1.3px;
 }
 
-.history {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    font-family: 'DM Serif Text', serif;
-    letter-spacing: 0.9px;
-}
 
-.text {
-    padding-left: 15px;
-    padding-right: 15px;
-    text-align: center;
-    width: 700px;
-
-}
