--- a/src/components/background/background.css
+++ b/src/components/background/background.css
@@ -1,11 +1,19 @@
-
 .title {
-  position: absolute;
-  top: 10px;
+  margin-top: -230px;
   font-size: 12px;
   text-align: center;
   color: rgb(67, 67, 67);
   font-family: 'Cormorant Garamond', serif;
   letter-spacing: 3px;
 }
-/* font-family: 'Cormorant Garamond', serif; */
+
+@media (max-width: 320px) {
+  .title {
+    margin-top: -200px;
+    font-size: 12px;
+    text-align: center;
+    color: rgb(67, 67, 67);
+    font-family: 'Cormorant Garamond', serif;
+    letter-spacing: 3px;
+  }
+}
