--- a/src/components/history/history.css
+++ b/src/components/history/history.css
@@ -1,5 +1,5 @@
 .title-history {
-    margin-top: 60px;
+    margin-top: 260px;
     display: flex;
     justify-content: center;
     font-family: 'Cormorant Garamond', serif;
@@ -7,3 +7,12 @@
 }
 
 
+@media (max-width: 320px) {
+    .title-history {
+        margin-top: 60px;
+        display: flex;
+        justify-content: center;
+        font-family: 'Cormorant Garamond', serif;
+        letter-spacing: 1.3px;
+    }
+  }
